--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^8.1.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 pytest-cov = "^5.0.0"
+pandas = "^2.2.2"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
