--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.10"
 requests = "^2.31.0"
 python-dotenv = "^1.0.1"
+openpyxl = "^3.1.2"
 
 
 [tool.poetry.group.lint.dependencies]
